tests/neg/missing-implicit5.check
-- [E008] Not Found Error: tests/neg/missing-implicit5.scala:15:16 -----------------------------------------------------
15 |  List(1, 2, 3).first // error
   |  ^^^^^^^^^^^^^^^^^^^
   |  value first is not a member of List[Int], but could be made available as an extension method.
   |
   |  The following import might fix the problem:
   |
   |    import testObjectInstance.instances.first
   |
-- [E008] Not Found Error: tests/neg/missing-implicit5.scala:16:16 -----------------------------------------------------
16 |  List(1, 2, 3).second // error
   |  ^^^^^^^^^^^^^^^^^^^^
   |  value second is not a member of List[Int], but could be made available as an extension method.
   |
   |  The following import might fix the problem:
   |
   |    import testObjectInstance.instances.second
   |
-- [E008] Not Found Error: tests/neg/missing-implicit5.scala:17:17 -----------------------------------------------------
17 |  Array(1, 2, 3).first // error, no hint
   |  ^^^^^^^^^^^^^^^^^^^^
   |  value first is not a member of Array[Int]
